# ollama_python

./: CMakeLists.txt  README.md  README_DETAILS.md  README_DETAILS_EN.md  README_DETAILS_en.md  README_EN.md  README_en.md  install.sh  package.xml
action/: ChatOllama.action
examples/async-chat-stream/: main.py
examples/chat/: main.py
examples/chat-stream/: main.py
examples/generate/: main.py
examples/ros_version/: ollama_action_client.py  ollama_service_client.py
launch/: model_download.launch  ollama.launch
prompt/: base_prompt.yaml
scripts/: model_downloader.py
src/: gui.py  model_downloader.py  ollama_action_server.py  ollama_client.py  ollama_server.py
