<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sobit_pro_control</name>
  <version>0.0.0</version>
  <description>
    This package allows the use of ollama_python in ROS
  </description>
  <maintainer email="todo@gmail.com">Fumiya ONO</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/ollama_python</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/ollama_python/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
